Use LinkedList API to avoid NPEs